// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseCads CardListの初期値(linkあり): dummyCardsLink 1`] = `
"<div>
  <div>
    <div class=\\"card-list\\">
      <div class=\\"card-list__card\\">
        <article class=\\"card__item\\">
          <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card__img\\">
            <figcaption>
              <h2 class=\\"card__title\\">ダミータイトル</h2>
              <p class=\\"card__text\\">詳細</p>
            </figcaption>
          </figure> <button class=\\"btn\\">
            WebSite
          </button>
        </article>
      </div>
      <div class=\\"card-list__card\\">
        <article class=\\"card__item\\">
          <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card__img\\">
            <figcaption>
              <h2 class=\\"card__title\\">ダミータイトル</h2>
              <p class=\\"card__text\\">詳細</p>
            </figcaption>
          </figure> <button class=\\"btn\\">
            GitHub
          </button>
        </article>
      </div>
    </div>
  </div>
</div>"
`;

exports[`BaseCads CardListの初期値(linkなし): dummyCards 1`] = `
"<div>
  <div>
    <div class=\\"card-list\\">
      <div class=\\"card-list__card\\">
        <article class=\\"card__item\\">
          <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card__img\\">
            <figcaption>
              <h2 class=\\"card__title\\">ダミータイトル</h2>
              <p class=\\"card__text\\">詳細</p>
            </figcaption>
          </figure>
          <!---->
        </article>
      </div>
      <div class=\\"card-list__card\\">
        <article class=\\"card__item\\">
          <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card__img\\">
            <figcaption>
              <h2 class=\\"card__title\\">ダミータイトル</h2>
              <p class=\\"card__text\\">詳細</p>
            </figcaption>
          </figure>
          <!---->
        </article>
      </div>
    </div>
  </div>
</div>"
`;

exports[`BaseNav 閉じた時のスナップショット 1`] = `
"<div>
  <nav>
    <div>
      <div class=\\"nav-bar\\">
        <div class=\\"nav-bar__box\\"><a href=\\"/\\" class=\\"nav__logo\\">ダミー</a>
          <div>
            <div class=\\"border__group\\"><span class=\\"border__top border__top--close\\"></span> <span class=\\"border__middle\\"></span> <span class=\\"border__bottom border__bottom--close\\"></span></div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <transition-stub name=\\"nav-fade\\">
        <div class=\\"nav-list\\" style=\\"display: none;\\">
          <ul>
            <div>
              <li class=\\"nav__item\\"><a class=\\"nav__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"Topの画像\\" class=\\"nav__icon\\">
                  <div class=\\"nav__text\\">Top</div>
                </a></li>
            </div>
          </ul>
        </div>
      </transition-stub>
    </div>
  </nav>
</div>"
`;

exports[`BaseNav 開いた時のスナップショット 1`] = `
"<div>
  <nav>
    <div>
      <div class=\\"nav-bar\\">
        <div class=\\"nav-bar__box\\"><a href=\\"/\\" class=\\"nav__logo\\">ダミー</a>
          <div>
            <div class=\\"border__group\\"><span class=\\"border__top border__top--open\\"></span> <span class=\\"border__middle border__middle--fade\\"></span> <span class=\\"border__bottom border__bottom--open\\"></span></div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <transition-stub name=\\"nav-fade\\">
        <div class=\\"nav-list\\" style=\\"\\">
          <ul>
            <div>
              <li class=\\"nav__item\\"><a class=\\"nav__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"Topの画像\\" class=\\"nav__icon\\">
                  <div class=\\"nav__text\\">Top</div>
                </a></li>
            </div>
          </ul>
        </div>
      </transition-stub>
    </div>
  </nav>
</div>"
`;
